article title gap fix

--- a/articles/style.css
+++ b/articles/style.css
@@ -78,6 +78,7 @@
     font-family: "Inter", sans-serif;
     font-size: 17px;
     font-weight: 400;
+    margin-top: 10px;
     margin-bottom: 5px;
 }
 
